--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,6 @@ Authors@R: person("Long", "Qu", role=c("aut", "cre"), email="long.qu@wright.edu"
 Depends: R (>= 3.1.2)
 Enhances: base
 Suggests: microbenchmark
-Description: This package provides an alternative implementation of base::duplicated.matrix and base::unique.matrix for atomic matrices (i.e., double, integer, logical, character, complex and raw) directly based on C++ Standard Template Library std::set, avoiding the time consuming collapse of the matrix into a character vector. 
+Description: An alternative implementation of base::duplicated.matrix and base::unique.matrix for atomic matrices (i.e., double, integer, logical, character, complex and raw) directly based on C++ Standard Template Library std::set, avoiding the time consuming collapse of the matrix into a character vector. 
 License: GPL (>= 2)
 NeedsCompilation: yes
