--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ export(duplicated.matrix, unique.matrix, anyDuplicated.matrix, grpDuplicated, gr
 S3method(unique, matrix)
 S3method(duplicated, matrix)
 S3method(anyDuplicated, matrix)
+S3method(grpDuplicated, default)
 S3method(grpDuplicated, matrix)
 
 useDynLib(uniqueAtomMat, .registration =TRUE, .fixes="C_")
