added Biarch field to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: uniqueAtomMat
 Version: 0.1-1
-Date: 2015-07-04
+Date: 2015-07-05
 Title: Finding Unique or Duplicated Rows or Columns for Atomic Matrices
 Authors@R: person("Long", "Qu", role=c("aut", "cre"), email="long.qu@wright.edu")
-Depends: R (>= 3.1.2)
+Depends: R (>= 3.0.0)
 Enhances: base
 Suggests: microbenchmark
 Description: An alternative implementation and extension (grpDuplicated) of base::duplicated.matrix, base:anyDuplicated.matrix and base::unique.matrix for matrices of atomic mode, avoiding the time consuming collapse of the matrix into a character vector. 
@@ -11,3 +11,4 @@ License: GPL (>= 2)
 NeedsCompilation: yes
 URL: https://github.com/gitlongor/uniqueAtomMat
 BugReports: https://github.com/gitlongor/uniqueAtomMat/issues
+Biarch: yes
