--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: uniqueAtomMat
-Version: 0.1-2
-Date: 2016-03-01
+Version: 0.1-2-160331
+Date: 2016-03-31
 Title: Finding Unique or Duplicated Rows or Columns for Atomic Matrices
 Authors@R: person("Long", "Qu", role=c("aut", "cre"), email="long.qu@wright.edu")
 Depends: R (>= 3.1.0)
