--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: uniqueAtomMat
-Version: 0.1-2-160331
-Date: 2016-03-31
+Version: 0.1-3
+Date: 2017-07-07
 Title: Finding Unique or Duplicated Rows or Columns for Atomic Matrices
-Authors@R: person("Long", "Qu", role=c("aut", "cre"), email="long.qu@wright.edu")
-Depends: R (>= 3.1.0)
+Authors@R: person("Long", "Qu", role=c("aut", "cre"), email="rtist@qq.com")
+Depends: R (>= 3.4.0)
 Enhances: base
 Suggests: microbenchmark
 Description: An alternative implementation and extension (grpDuplicated) of base::duplicated.matrix, base:anyDuplicated.matrix and base::unique.matrix for matrices of atomic mode, avoiding the time consuming collapse of the matrix into a character vector. 
