--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: uniqueAtomMat
-Version: 0.1-3
-Date: 2017-07-07
+Version: 0.1-3-1
+Date: 2017-07-08
 Title: Finding Unique or Duplicated Rows or Columns for Atomic Matrices
-Authors@R: person("Long", "Qu", role=c("aut", "cre"), email="rtist@qq.com")
+Authors@R: person("Long", "Qu", role=c("aut", "cre"), email="rtistician@gmail.com")
 Depends: R (>= 3.4.0)
 Enhances: base
 Suggests: microbenchmark
-Description: An alternative implementation and extension (grpDuplicated) of base::duplicated.matrix, base:anyDuplicated.matrix and base::unique.matrix for matrices of atomic mode, avoiding the time consuming collapse of the matrix into a character vector. 
+Description: An alternative implementation of base::duplicated.matrix(), base:anyDuplicated.matrix() and base::unique.matrix() for matrices of atomic mode, avoiding the time consuming collapse of the matrix into a character vector. An extra grpDuplicated() function is added, which groups duplicated elements together. 
 License: GPL (>= 2)
 NeedsCompilation: yes
 URL: https://github.com/gitlongor/uniqueAtomMat
