--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: uniqueAtomMat
-Version: 0.1-3-2
-Date: 2017-07-08
+Version: 0.1-4
+Date: 2017-07-09
 Title: Finding Unique or Duplicated Rows or Columns for Atomic Matrices
 Authors@R: person("Long", "Qu", role=c("aut", "cre"), email="rtistician@gmail.com")
 Depends: R (>= 3.4.0)
